_sass/_2rules.scss
/*
 * Theme for Very Thorough
 * Heavily adapted from Lanyon/Poole by @mdo
 */


/*
 * Contents
 *
 * Custom type
 * Container
 * Header
 * Posts and pages
 */




/*
 * Custom type
 *
 * Extend paragraphs with `.lead` for larger introductory text.
 */

.lead {
  font-size: 1.25rem;
  font-weight: $normal;
}

/*
 * Container
 *
 * Center the page content.
 */

.container {
  width: 100%;
  max-width: 60rem;
  padding-left:  1rem;
  padding-right: 1rem;
  margin-left:  auto;
  margin-right: auto;
}


/*
 * Header & Footer
 *
 * Small header above the content for site name, description, and social links.
 * Social links repeat in footer
 */

.site-header {
  padding-top:    .5rem;
  margin-bottom: 1.5rem;
  overflow: hidden;
  background: $purple;
  background: linear-gradient(90deg, $purple, $teal);
  color: $white;
  li {
    margin: 0.5em 0;
  }
  a {
    padding: 1.2rem 0.5em;
    color: $white;
    font-weight: $normal;
    text-decoration: none;
    background-position-y: -2.5em;
    transition: 0.3s ease;
    &:hover,
    &:focus {
      background: rgba(255,255,255,0.25);
      background: linear-gradient(rgba(255,255,255,0.25), rgba(0,0,0,0) 80%) no-repeat;
    }
  }
  .social-links {
    float: right;
  }
  .icon, .icon svg {
    fill: $white;
  }
}

.site-footer {
  margin-top: 1.5em;
  text-align: center;
  .icon {
    display: block;
    margin: auto;
  }
  a:hover,
  a:focus {
    border-bottom: 1px solid;
  }
}

.site-title {
  margin-top: 0;
  margin-bottom: 0;
  display: inline-block;
}

.social-links {
  font-size: 1.125em;
}

@media (min-width: 34em) {
  .site-header .icon {
    height: .9em;
    width: 1em;
  }
}

@media (max-width: 34em) {
  .icon-label {
    display: none;
  }
  .social-links a:hover .icon-label {
    display: block;
    position: absolute;
  }
}


/*
 * Posts and pages
 *
 * Each post is wrapped in `.post` and is used on default and post layouts. Each
 * page is wrapped in `.page` and is only used on the page layout.
 */

.content {
  flex: 1;
}

.page,
.post {
  margin-bottom: 4em;
}

.content a {
  border-bottom: 1px solid $lt-teal;
  &:hover,
  &:focus {
    border-bottom-color: currentColor;
  }
}



/* Blog post or page title */
.page-title,
.post-title,
.post-title a {
  color: $teal;
}
.page-title,
.post-title {
  margin-top: 0;
}

/* Meta data line below post title */
.post-date {
  display: block;
  margin-top: -.5rem;
  margin-bottom: 1rem;
  color: $neutral-med;
}

/* Related posts */
.related {
  padding-top: 2rem;
  padding-bottom: 2rem;
  border-top: 1px solid #eee;
}
.related-posts {
  padding-left: 0;
  list-style: none;
}
.related-posts h3 {
  margin-top: 0;
}

/* Projects */
.projects {
  text-align: center;
}

.projects .post {
  margin-bottom: 1.5rem;
  @media (min-width: 28em) {
    display: inline-block;
    vertical-align: top;
    width: 45%;
    margin-right: 2.5%;
  }
}


.project-thumb,
.project-image {
  border: 1px solid $neutral-light;
}

.project-image {
  margin-bottom: 1.5rem;
}

.skills-list li {
  margin: 0.5em auto;
}

@media (min-width: 50em) {
  .projects .post {
    width: 30%;
  }
  .project-title,
  .project-buttons {
    display: inline-block;
  }
  .project-buttons {
    float: right;
  }
}

.jump-links {
  text-align: center;
}

.more-link {
  clear: both;
  text-align: right;
}

.avatar {
  float: left;
  margin-right: 3%;
  max-width: 9rem;
  border-radius: 50%;
  shape-outside: circle();
  shape-margin: 1%;
}


/* Floats */
.right {
  float: right;
  margin-left: 1em;
}

.left {
  float: left;
  margin-right: 1em;
}

